# finance

./: .gitignore  AGENTS.md  AUDIT.md  AUDIT_PLAN.md  CONTEXT.md  Makefile  README.md  ROADMAP.md  TODO.md  package.json  pnpm-workspace.yaml
apps/backend/: pyproject.toml
apps/backend/tests/: conftest.py
archive/: README.md  TradeForge  portfolio-optimization  stock-monitor  stock-signal
docs/: digest_prompt.md
docs/adr/: 0001-chiusura-swing-fund.md  0002-dismissione-stock-segnale-con-backstop.md  0003-satellite-10pct-con-kill-switch.md
docs/superpowers/plans/: 2026-07-01-portfolio-webapp.md  2026-07-01-tradingview-market-data.md
docs/superpowers/specs/: 2026-07-01-tradingview-market-data-design.md
